# cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  schema_js.json  setup.cfg  setup.py  test.parquet
.github/workflows/: changelog.yml  checks.yml  publish.yml  pytest.yml  ruff.yml
fiboa_cli/: __init__.py  const.py  convert.py  convert_gml.py  convert_utils.py  converter_rest.py  converter_rest_pregenerate.py  create.py  create_geojson.py  create_geoparquet.py  describe.py  geopandas.py  history.py  improve.py  jsonschema.py  jsonschema_template.py  merge.py  parquet.py  rename_extension.py  types.py  util.py  validate.py  validate_data.py  validate_schema.py  version.py
fiboa_cli/datasets/: ai4sf.py  at.py  at_crop.py  be_vlg.py  be_wa.py  be_wal.py  br_ba_lem.py  ch.py  cz.py  de_bb.py  de_mv.py  de_nds.py  de_nrw.py  de_sax.py  de_sh.py  de_sl.py  de_th.py  digifarm.py  dk.py  ec_be_vlg.py  ec_ee.py  ec_fr.py  ec_lt.py  ec_lv.py  ec_nl_crop.py  ec_si.py  es.py  es_an.py  es_ar.py  es_cat.py  es_cb.py  es_cl.py  es_cm.py  es_cn.py  es_ex.py  es_ga.py  es_ib.py  es_md.py  es_nc.py  es_pv.py  (+24 more)
fiboa_cli/datasets/commons/: admin.py  data.py  dictobject.py  ec.py  euro_land.py
fiboa_cli/datasets/data-files/: es_an_prv.csv  es_cl_prv.csv  es_cult.csv  nz_region_codes.csv  us_ca_scm.csv  us_fips.csv
fiboa_cli/datasets/utils/: de_utils.py
tests/: conftest.py  test_convert.py  test_converters.py  test_create_geojson.py  test_create_geoparquet.py  test_create_stac.py  test_describe.py  test_encoding_auto.py  test_encoding_geojson.py  test_encoding_geoparquet.py  test_improve.py  test_jsonschema.py  test_merge.py  test_ops.py  test_rename_extension.py  test_validate.py  test_validate_schema.py
tests/data-files/: admin.json  convert-invalid.parquet  fr.7z  inspire-invalid.json  inspire-schema-invalid.yaml  inspire-schema.yaml  inspire.json  inspire.parquet  inspire2.json  mixed-invalid.json  mixed-invalid.parquet  mixed.json  mixed.parquet  update-parquet.sh
tests/data-files/convert/: LICENSE.txt
tests/data-files/convert/ai4sf/: 1_vietnam_areas.gpkg  4_cambodia_areas.gpkg
tests/data-files/convert/ch/: lwb_nutzungsflaechen_v2_0_lv95.gpkg
tests/data-files/convert/ec_lv/: LV_2021_EC21.dbf  LV_2021_EC21.shp  LV_2021_EC21.shx
tests/data-files/convert/ec_si/: SI_2021_EC21.gpkg
tests/data-files/convert/fi/: LandUse.ExistingLandUse.GSAAAgriculturalParcel.gpkg
tests/data-files/convert/fr/: RPG_2-0__GPKG_LAMB93_FXX_2022-01-01.7z.001
tests/data-files/convert/hr/: land_parcels.gpkg
tests/data-files/convert/jp/: jp_field_polygons_2024.parquet
tests/data-files/convert/lv/: 1_100.xml
tests/data-files/convert/nl/: referentiepercelen.gpkg
tests/data-files/convert/nl_crop/: brpgewaspercelen_definitief_2023.gpkg
tests/data-files/convert/pt/: Continente.gpkg  README.md
tests/data-files/convert/se/: se_2021.csv
tests/data-files/convert/si/: KMRS_2023.rar
tests/data-files/jsonschema/: schema.json  schema.yaml  test1.json  test1.yaml
tests/data-files/merge/: at.parquet  be_wa.parquet  nl.parquet
tests/data-files/sdl/: inspire-schema-invalid.yaml  inspire-schema.yaml
tests/data-files/stac/: collection-de-sh-json.json  collection-de-sh-parquet.json  collection-fiboa.json  collection-json.json  collection-parquet.json  collection.json  de-sh.json  de-sh.parquet  fiboa.json
tests/datasets/: data_access.py  example.py  invalid_name.py  invalid_syntax.py
vecorel_cli/: __init__.py  basecommand.py  const.py  convert.py  convert_gml.py  convert_utils.py  converters.py  create_geojson.py  create_geoparquet.py  create_jsonschema.py  create_stac.py  describe.py  improve.py  jsonschema.py  merge.py  old_cli.py  registry.py  rename_extension.py  types.py  util.py  validate.py  validate_data.py  validate_schema.py  version.py
vecorel_cli/cli/: logger.py  options.py  path_url.py  setup.py  util.py
vecorel_cli/conversion/: admin.py  base.py  baseconverter.py  flatdict.py
vecorel_cli/datasets/: template.py
vecorel_cli/encoding/: auto.py  base.py  geojson.py  geoparquet.py
vecorel_cli/jsonschema/: template.py  util.py
vecorel_cli/parquet/: parquet.py  types.py
vecorel_cli/validation/: base.py  data.py  geojson.py  geoparquet.py
vecorel_cli/vecorel/: collection.py  extensions.py  ops.py  schemas.py  typing.py  util.py  version.py
